@@ -48,7 +48,7 @@
     <filename>/dev/video0</filename></para>
 
     <para>The underlying library currently supports EAN-13 (including
-    UPC-A and ISBN subsets), EAN-8, Code 128, Code 39, and Interleaved
+    UPC and ISBN subsets), EAN-8, Code 128, Code 39, and Interleaved
     2 of 5 symbologies.  The specific type of each detected symbol is
     printed with the decoded data.</para>
 
