@@ -50,7 +50,7 @@
     displayed to the screen.</para>
 
     <para>The underlying library currently supports EAN-13 (including
-    UPC-A and ISBN subsets), EAN-8, Code 128, Code 39, and Interleaved
+    UPC and ISBN subsets), EAN-8, Code 128, Code 39, and Interleaved
     2 of 5 symbologies.  The specific type of each detected symbol is
     printed with the decoded data.</para>
 
